--- a/.github/workflows/autofix.yaml
+++ b/.github/workflows/autofix.yaml
@@ -21,5 +21,6 @@ jobs:
       - run: deno fmt
         env:
           AQUA_GITHUB_TOKEN: ${{github.token}}
+      - run: deno check
 
       - uses: autofix-ci/action@635ffb0c9798bd160680f18fd73371e355b85f27 # v1.3.2
