--- a/.github/workflows/autofix.yaml
+++ b/.github/workflows/autofix.yaml
@@ -22,5 +22,8 @@ jobs:
         env:
           AQUA_GITHUB_TOKEN: ${{github.token}}
       - run: deno check
+      - run: git ls-files | xargs nllint -f -s
+        env:
+          AQUA_GITHUB_TOKEN: ${{github.token}}
 
       - uses: autofix-ci/action@635ffb0c9798bd160680f18fd73371e355b85f27 # v1.3.2
