ci: release new versions by tag

--- a/deno.json
+++ b/deno.json
@@ -1,16 +1,12 @@
 {
   "name": "@suzuki-shunsuke/commit-ts",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "exports": "./main.ts",
   "tasks": {
     "dev": "deno run --watch main.ts"
   },
   "publish": {
-    "include": [
-      "LICENSE",
-      "README.md",
-      "main.ts"
-    ]
+    "include": ["LICENSE", "README.md", "main.ts"]
   },
   "imports": {
     "@actions/github": "npm:@actions/github@^6.0.1",
