--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,8 +1,8 @@
 name: Publish
 on:
   push:
-    branches:
-      - main
+    tags:
+      - "*"
 jobs:
   publish:
     runs-on: ubuntu-24.04
@@ -15,7 +15,7 @@ jobs:
           persist-credentials: false
       - uses: aquaproj/aqua-installer@11dd79b4e498d471a9385aa9fb7f62bb5f52a73c # v4.0.4
         with:
-          aqua_version: v2.56.1
+          aqua_version: v2.56.2
       - run: deno check
         env:
           AQUA_GITHUB_TOKEN: ${{github.token}}
