--- a/deno.json
+++ b/deno.json
@@ -9,8 +9,8 @@
     "include": ["LICENSE", "README.md", "main.ts"]
   },
   "imports": {
-    "@actions/github": "npm:@actions/github@^6.0.1",
-    "@octokit/rest": "npm:@octokit/rest@^22.0.0",
-    "@std/assert": "jsr:@std/assert@1"
+    "@actions/github": "npm:@actions/github@^9.0.0",
+    "@octokit/rest": "npm:@octokit/rest@^22.0.1",
+    "@std/assert": "jsr:@std/assert@^1.0.19"
   }
 }
